force-app/main/default/objects/Survey_Response__c/Survey_Response__c.object-meta.xml
<CustomObject>
    
    
    
    
    <label>Survey Response</label>
    
    
    <pluralLabel>Survey Responses</pluralLabel>
    
    
    <sharingModel>ControlledByParent</sharingModel>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <nameField>
        
        
        <label>Survey Response Name</label>
        
        
        <type>Text</type>
        
    
    </nameField>
    

</CustomObject>