force-app/main/default/objects/Survey_Response__c/fields/Cleanliness_Rating__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_Rating__c</fullName>
    <label>Cleanliness Rating</label>
    <type>Number</type>
    <description>Cleanliness rating (1-5 scale)</description>
    <inlineHelpText>Rate from 1 to 5</inlineHelpText>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>