force-app/main/default/objects/Survey_Response__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <type>LongTextArea</type>
    <inlineHelpText>General comments</inlineHelpText>
    <length>10000</length>
</CustomField>