force-app/main/default/objects/Survey_Response__c/fields/Communication_Rating__c.field-meta.xml
<CustomField>
    <fullName>Communication_Rating__c</fullName>
    <label>Communication Rating</label>
    <type>Number</type>
    <description>Communication rating (1-5 scale)</description>
    <inlineHelpText>Rate from 1 to 5</inlineHelpText>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>