force-app/main/default/objects/Survey_Response__c/fields/Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Notes__c</fullName>
    <label>Follow Up Notes</label>
    <type>TextArea</type>
    <inlineHelpText>Notes about required follow up</inlineHelpText>
</CustomField>