force-app/main/default/objects/Survey_Response__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <label>Follow Up Required</label>
    <type>Checkbox</type>
    <description>Does this response require follow up</description>
    <defaultValue>false</defaultValue>
</CustomField>