force-app/main/default/objects/Survey_Response__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <label>Overall Rating</label>
    <type>Picklist</type>
    <inlineHelpText>Overall satisfaction rating</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>