force-app/main/default/objects/Survey_Response__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <label>Resident</label>
    <type>Lookup</type>
    <description>Resident the survey is about</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Responses (Resident)</relationshipLabel>
    <relationshipName>Survey_Responses_Resident</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>