force-app/main/default/objects/Survey_Response__c/fields/Respondent__c.field-meta.xml
<CustomField>
    <fullName>Respondent__c</fullName>
    <label>Respondent</label>
    <type>Lookup</type>
    <description>Person who completed the survey</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Responses (Respondent)</relationshipLabel>
    <relationshipName>Survey_Responses_Respondent</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>