force-app/main/default/objects/Survey_Response__c/fields/Would_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Would_Recommend__c</fullName>
    <label>Would Recommend</label>
    <type>Picklist</type>
    <inlineHelpText>Would recommend to others</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Definitely Yes</fullName>
            </value>
            <value>
                <fullName>Probably Yes</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
            <value>
                <fullName>Probably No</fullName>
            </value>
            <value>
                <fullName>Definitely No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>